unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ETT_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>