unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Is_Buying_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Buying_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Buying Price</label>
    <type>Checkbox</type>
</CustomField>