unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Is_Process__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Process</label>
    <type>Checkbox</type>
</CustomField>