unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Is_Retread_Price_P__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Retread_Price_P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retread Price P</label>
    <type>Checkbox</type>
</CustomField>