unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Is_Selling_Price_H__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Selling_Price_H__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Selling Price H</label>
    <type>Checkbox</type>
</CustomField>