unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Object_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>