unpackaged/main/default/objects/ETT_Event_Log__c/fields/ETT_Sobject_Id__c.field-meta.xml
<CustomField>
    <fullName>ETT_Sobject_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobject Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>