unpackaged/main/default/objects/ETT_Event_Log__c/fields/Is_Retread_Price_H__c.field-meta.xml
<CustomField>
    <fullName>Is_Retread_Price_H__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retread Price H</label>
    <type>Checkbox</type>
</CustomField>